# micro-shop-fastapi

./: LICENSE  main.py  pyproject.toml  test.db
migrations/: env.py
migrations/versions/: 2025_02_19_2330-c1944c0b2843_new_tables.py
src/database/: __init__.py  base.py  connection.py
src/database/models/: __init__.py  orders.py  products.py  reviews.py  role.py  shop.py  users.py
src/database/models/association_tables/: __init__.py  orders_products.py  reviews_products.py  users_orders.py  users_reviews.py  users_shop.py
src/domain/: __init__.py  utils.py
src/domain/repositories/: __init__.py  base_repo.py  roles.py  sqlalchemy_repository.py
src/domain/schemas/: __init__.py  reviews.py  users.py
src/domain/services/: base.py
src/domain/services/users/: hash_password.py  jwt_utils.py
src/router/: main_router.py
src/router/admin/: router.py
src/router/users/: router.py
